   (closes http://trac.openplans.org/openplans/ticket/2728) (novalis)

 * Fixed AttributeError when anonymous user requests project
   membership (http://trac.openplans.org/openplans/ticket/2735) (dimo)

 * Slightly more useful error message on project creation when URL
   does not contain enough ASCII characters
   (http://trac.openplans.org/openplans/ticket/2733) (egj)


Refactoring:

 * Optimization: Cache number of users and projects for 10 minutes
   (rafrombrc)

 * simplify OpenMember's validate_id and do most expensive/brittle
   checks last (egj)

 * Removed obsolete do_nothing.py, which was a workaround for Plone < 3 
   (slinkp)

 * Remove more subproject cruft (openplans:#2670) (egj)

 * Remove topnav cruft (openplans:#2581) (egj)

 * Remove BaseView.get_view cruft (egj)


0.14.1 (2008/11/07)
===================

Data Migrations:

 * The migration needed for 0.14.0 has been rewritten to work as a
   standard GenericSetup upgrade.  You can now upgrade via the
   portal_setup tool in the ZMI; go to the upgrades tab and run the
   upgrade registered for version 0.14.0.

   (The script also still exists at migrations/update_member_project_ids.py 
   if you prefer to run it via zopectl.)

Features:

 * Added i18n for some wiki history views, if you can call that a feature.

Bug fixes:

 * List manager address was showing up as escaped HTML.
   (slinkp) (openplans:#2706)

 * Wiki version view doesn't error when no version_id is specified
   (slinkp) (http://trac.openplans.org/errors-openplans/ticket/30)

 * Error page doesn't barf on 404s if the catalog has a problem coming
   up with suggestions based on the current URL (slinkp)
   (http://trac.openplans.org/errors-openplans/ticket/23)

 * Fixed rare error in recataloging projects, raised by
   the project's _default_img_data method. (slinkp)

Refactoring:

 * Removed a ton of FormLite and Octopus cruft from opencore/browser.
   Everything left is in opencore/browser/formhandler.py, with more