@@ -2,6 +2,8 @@ setglobal user       'tester'
 setglobal fullname   'John Q. Tester' 
 setglobal password   'tester1'
 setglobal email      'test@example.com'
+setglobal user2	     'tester2'
+setglobal email2     'test2@example.com'
 setglobal projname   'testhaven' 
 setglobal projfullname 'testers test project'
 setglobal projtitle  'testers test project'
