@@ -6,8 +6,9 @@
 # $adminpw  - password for zope admin 
 # 
 
-extend_with flunc.zope_cleanup
+#extend_with flunc.zope_cleanup
 
 zope_delobject 'portal_memberdata' $user $admin $adminpw
+# this should be redundant now...
 zope_delobject 'people' $user $admin $adminpw
 
