@@ -2,7 +2,7 @@ from Products.Five.browser.pagetemplatefile import ZopeTwoPageTemplateFile
 from opencore.i18n import _
 from opencore.browser.formhandler import OctopoLite
 from opencore.browser.formhandler import action
-from opencore.nui.email_sender import EmailSender
+from opencore.utility.interfaces import IEmailSender
 from opencore.member.browser.view import ProfileView
 
 class MemberContactView(ProfileView, OctopoLite):
@@ -20,12 +20,12 @@ class MemberContactView(ProfileView, OctopoLite):
 
     @action("send")
     def send(self, target=None, fields=None):
-        sender = EmailSender(self, secureSend=True)
+        sender = IEmailSender(self.portal)
         mto = self.viewed_member_info.get('email')
         mfrom = self.loggedinmember.getId()
         msg = self.request.form['message']
         subject = self.request.form['subject']
-        sender.sendEmail(mto, msg=msg, subject=subject, mfrom=mfrom)
+        sender.sendMail(mto, msg=msg, subject=subject, mfrom=mfrom)
         self.addPortalStatusMessage(_(u'psm_message_sent_to_user',
                                       u'Message sent.'))
         ret_url = self.request.form.get('ret_url') or self.context.absolute_url()
